--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,16 @@
     "private": true,
     "main": "server.js",
     "scripts": {
-        "start": "nodemon server.js"
+        "build": "rimraf dist/ && babel server.js -d dist",
+        "start": "npm run build && nodemon dist/server.js"
     },
     "dependencies": {
         "body-parser": "^1.18.3",
         "express": "^4.16.4"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
         "nodemon": "^1.18.10"
     }
 }
