--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,21 @@
     "name": "socio-server",
     "version": "0.1.0",
     "private": true,
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
-        "build": "rimraf dist/ && babel server.js -d dist",
-        "start": "npm run build && nodemon dist/server.js"
+        "start": "nodemon --exec babel-node src/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
         "body-parser": "^1.18.3",
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "mongoose": "^5.4.13"
     },
     "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-preset-es2015": "^6.24.1",
-        "nodemon": "^1.18.10"
+        "@babel/core": "^7.3.3",
+        "@babel/node": "^7.2.2",
+        "@babel/preset-env": "^7.3.1",
+        "nodemon": "^1.18.10",
+        "rimraf": "^2.6.3"
     }
 }
