--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,26 @@
 {
-    "name": "socio-server",
-    "version": "0.1.0",
-    "private": true,
-    "main": "index.js",
-    "scripts": {
-        "start": "nodemon --exec babel-node src/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "dependencies": {
-        "body-parser": "^1.18.3",
-        "express": "^4.16.4",
-        "mongoose": "^5.4.13"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.3.3",
-        "@babel/node": "^7.2.2",
-        "@babel/preset-env": "^7.3.1",
-        "nodemon": "^1.18.10",
-        "rimraf": "^2.6.3"
-    }
+  "name": "socio-server",
+  "version": "0.1.0",
+  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon --exec babel-node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit": "pretty-quick --staged"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.13"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "husky": "^1.3.1",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0",
+    "rimraf": "^2.6.3"
+  }
 }
