--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "precommit": "pretty-quick --staged"
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.13"
