--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,22 @@
 {
   "name": "socio-server",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "main": "index.js",
   "scripts": {
+    "client-install": "npm install --prefix ../client",
     "start": "nodemon --exec babel-node src/index.js",
+    "server": "node --exec babel-node src/index.js",
+    "client": "npm start --prefix ../client",
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "pretty-quick --staged"
   },
+  "author": "Prathu Singh",
   "dependencies": {
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.13",
