--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
