--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "fetch": "^1.1.0",
     "formik": "^1.5.1",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
