--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "i": "^0.3.6",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.13",
+    "node-mailer": "^0.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   },
