--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "googleapis": "^38.0.0",
     "i": "^0.3.6",
