--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.5.0",
     "eslint": "5.15.3",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest": "24.5.0",
     "metro-react-native-babel-preset": "0.53.1",
     "react-test-renderer": "16.8.3"
