--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.4.13",
     "node-mailer": "^0.1.1",
     "passport": "^0.4.0",
+    "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
