--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-google-login": "^5.0.3",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
