Fixed authentication using google oauth Fixed bcrypt install dude to node upgrade

--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   },
   "author": "Prathu Singh",
   "dependencies": {
-    "bcrypt": "^3.0.4",
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
@@ -25,6 +25,8 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.13",
     "node-mailer": "^0.1.1",
+    "node-pre-gyp": "^0.12.0",
+    "node-sass": "^4.11.0",
     "passport": "^0.4.0",
     "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0"
