--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
     "server": "node --exec babel-node src/index.js",
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
+    "prod": "concurrently \"npm run server\"npm run client\"",
+    "heroku-postbuild": "npm run prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Prathu Singh",
