--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "client-install": "npm install --prefix ../client",
-    "start": "nodemon --exec babel-node src/index.js",
-    "server": "node --exec babel-node src/index.js",
+    "start": "webpack --mode development",
+    "server": "webpack --mode production",
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "prod": "concurrently \"npm run server\"npm run client\"",
@@ -31,7 +31,8 @@
     "node-sass": "^4.11.0",
     "passport": "^0.4.0",
     "passport-google-token": "^0.1.2",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "webpack": "^4.29.6"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
@@ -41,6 +42,8 @@
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "webpack-cli": "^3.3.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
