--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "client-install": "npm install --prefix ../client",
-    "start": "webpack --mode development",
+    "start": "webpack-dev-server --mode development",
     "server": "webpack --mode production",
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
@@ -43,7 +43,6 @@
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
-    "webpack-cli": "^3.3.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-cli": "^3.3.0"
   }
 }
