--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
   },
   "author": "Prathu Singh",
   "dependencies": {
-    "bcrypt": "^3.0.5",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
@@ -28,7 +28,6 @@
     "mongoose": "^5.4.13",
     "node-mailer": "^0.1.1",
     "node-pre-gyp": "^0.12.0",
-    "node-sass": "^4.11.0",
     "passport": "^0.4.0",
     "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
