--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,8 @@
     "yup": "^0.26.10"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development --config ./src/config/webpack.base.config.js --open --hot --history-api-fallback --env.PLATFORM=local --env.VERSION=stag",
-    "prebuild": "webpack --mode production --config ./src/config/webpack.prod.config.js --env.PLATFORM=production --env.VERSION=stag --progress"
+    "client": "webpack-dev-server --mode development --config ./build-config/webpack.base.config.js --open --hot --history-api-fallback --env.PLATFORM=local --env.VERSION=stag",
+    "build-client": "webpack --mode production --config ./build-config/webpack.prod.config.js --env.PLATFORM=production --env.VERSION=stag --progress"
   },
   "eslintConfig": {
     "extends": "react-app"
