--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,12 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "client-install": "npm install --prefix ../client",
-    "start": "webpack-dev-server --mode development",
-    "server": "webpack --mode production",
-    "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm run start\" \"npm run client\"",
-    "prod": "concurrently \"npm run server\"npm run client\"",
-    "heroku-postbuild": "npm run prod",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "webpack-dev-server --mode development --config ./build-config/webpack.server.config.js --hot --env.PLATFORM=local --env.VERSION=stag",
+    "build-server": "webpack --mode production --config ./build-config/webpack.server.config.js --env.PLATFORM=production --env.VERSION=stag --progress"
   },
   "author": "Prathu Singh",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
@@ -31,17 +26,21 @@
     "passport": "^0.4.0",
     "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
-    "webpack": "^4.29.6"
+    "webpack": "^4.29.6",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
     "husky": "^1.3.1",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   }
 }
