--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv-webpack": "^1.7.0",
     "fetch": "^1.1.0",
     "formik": "^1.5.1",
     "jwt-decode": "^2.2.0",
@@ -19,7 +20,7 @@
     "yup": "^0.26.10"
   },
   "scripts": {
-    "client": "webpack-dev-server --mode development --config ./build-config/webpack.client.config.js --open --hot --history-api-fallback --env.PLATFORM=local --env.VERSION=stag",
+    "start-client": "webpack-dev-server --mode development --config ./build-config/webpack.client.config.js --hot --history-api-fallback --env.PLATFORM=dev --env.VERSION=stag",
     "build-client": "webpack --mode production --config ./build-config/webpack.client-prod.config.js --env.PLATFORM=production --env.VERSION=stag --progress"
   },
   "eslintConfig": {
