--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "server": "webpack-dev-server --mode development --config ./build-config/webpack.server.config.js --hot --env.PLATFORM=local --env.VERSION=stag",
-    "build-server": "webpack --mode production --config ./build-config/webpack.server.config.js --env.PLATFORM=production --env.VERSION=stag --progress"
+    "pre-build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./npm-debug.log --copy-files",
+    "build-server": "npm run pre-build & pm2  start ./dist/src/index.js",
+    "start-server": "NODE_ENV=dev nodemon --exec babel-node ./src/index.js"
   },
   "author": "Prathu Singh",
   "dependencies": {
@@ -25,22 +26,21 @@
     "node-pre-gyp": "^0.12.0",
     "passport": "^0.4.0",
     "passport-google-token": "^0.1.2",
-    "passport-jwt": "^4.0.0",
-    "webpack": "^4.29.6",
-    "webpack-merge": "^4.2.1",
-    "webpack-node-externals": "^1.7.2"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "babel-loader": "^8.0.5",
+    "@babel/preset-env": "^7.4.4",
     "husky": "^1.3.1",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1"
   }
 }
