--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "pre-build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./npm-debug.log --copy-files",
-    "build-server": "npm run pre-build & pm2  start ./dist/src/index.js",
-    "start-server": "NODE_ENV=dev nodemon --exec babel-node ./src/index.js"
+    "start": "npm run pre-build & node ./dist/src/index.js",
+    "start-dev": "NODE_ENV=dev nodemon --exec babel-node ./src/index.js"
   },
   "author": "Prathu Singh",
   "dependencies": {
