--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "node-pre-gyp": "^0.12.0",
     "passport": "^0.4.0",
     "passport-google-token": "^0.1.2",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "nodemon": "^1.18.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
