--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "pre-build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./npm-debug.log --copy-files",
-    "start": "nodemon --exec babel-node src/index.js",
+    "pre-build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./.env --copy-files && cp ./{.babelrc,.env} dist/",
+    "start": "node dist/index.js",
     "start-dev": "NODE_ENV=dev nodemon --exec babel-node ./src/index.js"
   },
   "author": "Prathu Singh",
