--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "pre-build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./.env --copy-files && cp ./{.babelrc,.env} dist/",
-    "start": "node dist/src/index.js",
+    "start": "node ./src/index.js",
     "start-dev": "NODE_ENV=dev nodemon --exec babel-node ./src/index.js"
   },
   "author": "Prathu Singh",
