--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "yup": "^0.26.10"
+    "yup": "^0.26.10",
+    "dotenv": "^7.0.0"
   },
   "scripts": {
     "start-client": "webpack-dev-server --mode development --config ./build-config/webpack.client.config.js --hot --env.PLATFORM=dev --env.VERSION=stag",
