--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "heroku-prebuild": "rimraf dist/ && babel ./src/ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./.env --copy-files ./.babelrc",
     "start": "node ./dist/index.js",
-    "start-dev": "NODE_ENV=dev nodemon --exec babel-node ./src/index.js"
+    "start-dev": "NODE_ENV=dev nodemon --inspect --exec babel-node ./src/index.js"
   },
   "author": "Prathu Singh",
   "dependencies": {
