--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
     "fetch": "^1.1.0",
     "formik": "^1.5.1",
