--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,8 @@
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-google-token": "^0.1.2",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -43,7 +44,6 @@
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
-    "rimraf": "^2.6.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1",
