--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
