--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-google-login": "^5.0.3",
+    "react-idle-timer": "^4.2.5",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
